<resources>
    <string name="app_name">Music Player</string>
    <string name="select_folder">Select Base Folder</string>
    <string name="no_folder_selected">No folder selected</string>
    <string name="no_track_selected">No track selected</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>
    <string name="album_art">Album art</string>
    <string name="unknown_track">Unknown track</string>
    <string name="library">Library</string>
    <string name="autoplay_next">Autoplay next file</string>
    <string name="back">Back</string>
    <string name="next_track">Next</string>
    <string name="back_button">Previous track</string>
    <string name="next_button">Next track</string>
    <string name="play_button">Play</string>
    <string name="pause_button">Pause</string>
    <string name="stop_button">Stop</string>
    <string name="open_drawer">Open library</string>
    <string name="seek_hint">mm:ss or hh:mm:ss</string>
    <string name="seek_go">Go</string>
    <string name="seek_invalid">Enter time like mm:ss</string>
    <string name="seek_unavailable">Select a track first</string>
    <string name="time_jump">Jump to time</string>
    <string name="time_jump_title">Jump to</string>
    <string name="time_jump_cancel">Cancel</string>
    <string name="time_jump_confirm">Seek</string>
    <string name="background_art">Background art</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="open_bookmarks">Open bookmarks</string>
    <string name="bookmark_missing_track">Bookmark file not found</string>
    <string name="play_bookmark_clip">Play bookmark clip</string>
    <string name="stop_bookmark_clip">Stop bookmark clip</string>
    <string name="bookmark_track">Bookmark</string>
    <string name="bookmark_saved">Bookmark saved</string>
    <string name="bookmark_saved_clip">Bookmark and clip saved</string>
    <string name="bookmark_saved_clip_failed">Bookmark saved, clip unavailable</string>
    <string name="bookmark_unavailable">Select a track first</string>
    <string name="playback_resume_failed">Could not resume last track</string>
    <string name="playback_channel_name">Playback</string>
    <string name="playback_channel_description">Background audiobook playback controls</string>
    <string name="skip_back_default">Back 10s</string>
    <string name="skip_forward_default">Forward 10s</string>
    <string name="skip_back_format">Back %1$s</string>
    <string name="skip_forward_format">Forward %1$s</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
</resources>
